# potpie

./: .env.sample  .gitignore  Dockerfile.celery  Dockerfile.fastapi  README.md  docker-compose.yaml  poetry.toml  pyproject.toml
src/potpie/: __init__.py  agents.py  celery_app.py  config.py  database.py  github_client.py  main.py  models.py  tasks.py  worker.py
tests/: test_github_client.py
