[project]
name = "potpie"
version = "0.1.0"
description = ""
authors = [{ name = "Aman Gupta", email = "aman16sep2k@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "celery[mongodb,rabbitmq] (>=5.5.3,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
name = "potpie"
version = "0.1.0"
description = ""
authors = []
license = "Proprietary"
readme = "README.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
